# keep

./: .gitignore  .pep8speaks.yml  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  release.sh  requirements.txt  setup.py  tutorial.md
completions/: keep.bash  keep.zsh
keep/: __init__.py  about.py  cli.py  keep.py  utils.py
keep/commands/: cmd_completion.py  cmd_download.py  cmd_edit.py  cmd_execute.py  cmd_github_token.py  cmd_grep.py  cmd_init.py  cmd_list.py  cmd_new.py  cmd_pull.py  cmd_push.py  cmd_register.py  cmd_rm.py  cmd_run.py  cmd_token.py  cmd_update.py  cmd_upload.py
